# ComputerArchitecture-CLI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Diagrams/: CLIArcthitecture.drawio  CLIArcthitecture.drawio.html
shell/: CMakeLists.txt
shell/include/private/: commandData.h  environment.h  preprocessor.h  result.h
shell/include/shell/: command.h  commandData.h  commandExecutor.h  environment.h  io.h  lexer.h  parser.h  preprocessor.h  shell.h  token.h
shell/include/shell/shell/: shell.h
shell/src/: CMakeLists.txt  command.cpp  commandData.cpp  environment.cpp  io.cpp  parser.cpp  preprocessor.cpp  result.cpp  shell.cpp  token.cpp
shell/src/commandData/: CMakeLists.txt  commandData.cpp
shell/src/commandExecutor/: CMakeLists.txt  commandExecutor.cpp
shell/src/commands/: CMakeLists.txt  command.cpp
shell/src/environment/: CMakeLists.txt  environment.cpp
shell/src/io/: CMakeLists.txt  io.cpp
shell/src/lexer/: CMakeLists.txt  lexer.cpp
shell/src/parser/: CMakeLists.txt  parser.cpp
shell/src/preprocessor/: CMakeLists.txt  preprocessor.cpp
shell/src/result/: CMakeLists.txt  result.cpp
shell/src/shell/: CMakeLists.txt  shell.cpp
shell/src/token/: CMakeLists.txt
shell/tests/: CMakeLists.txt
shell/tests/commandExecutor/: CMakeLists.txt  test0.cpp
shell/tests/commands/: CMakeLists.txt  assn0.cpp  assn1.cpp  assn2.cpp  cat0.cpp  cat1.cpp  cat2.cpp  echo0.cpp  exit0.cpp  ext0.cpp  file.txt  grepAll.cpp  pwd0.cpp  test2.cpp  testInput.txt  testInput2.txt  testInput3.txt  wc0.cpp  wc1.cpp  wc2.cpp
shell/tests/lexer/: CMakeLists.txt  test1.cpp  test10.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
shell/tests/parser/: CMakeLists.txt  test0.cpp  test1.cpp  test11.cpp  test12.cpp  test13.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
shell/tests/preprocessor/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
shell/tests/shell/: CMakeLists.txt  test0.cpp  test1.cpp  test2.cpp  test2.txt  test3.cpp  test4.cpp  test5.cpp  test6.cpp
