add_executable(ParserTest0 test0.cpp)
target_link_libraries(ParserTest0 PRIVATE parser)
add_test( NAME Parser:test0 COMMAND $<TARGET_FILE:ParserTest0>)

add_executable(ParserTest1 test1.cpp)
target_link_libraries(ParserTest1 PRIVATE parser)
add_test( NAME Parser:test1 COMMAND $<TARGET_FILE:ParserTest1>)

add_executable(ParserTest2 test2.cpp)
target_link_libraries(ParserTest2 PRIVATE parser)
add_test( NAME Parser:test2 COMMAND $<TARGET_FILE:ParserTest2>)

add_executable(ParserTest3 test3.cpp)
target_link_libraries(ParserTest3 PRIVATE parser)
add_test( NAME Parser:test3 COMMAND $<TARGET_FILE:ParserTest3>)

add_executable(ParserTest4 test4.cpp)
target_link_libraries(ParserTest4 PRIVATE parser)
add_test( NAME Parser:test4 COMMAND $<TARGET_FILE:ParserTest4>)

add_executable(ParserTest5 test5.cpp)
target_link_libraries(ParserTest5 PRIVATE parser)
add_test( NAME Parser:test5 COMMAND $<TARGET_FILE:ParserTest5>)

add_executable(ParserTest6 test6.cpp)
target_link_libraries(ParserTest6 PRIVATE parser)
add_test( NAME Parser:test6 COMMAND $<TARGET_FILE:ParserTest6>)

add_executable(ParserTest7 test7.cpp)
target_link_libraries(ParserTest7 PRIVATE parser)
add_test( NAME Parser:test7 COMMAND $<TARGET_FILE:ParserTest7>)

add_executable(ParserTest8 test8.cpp)
target_link_libraries(ParserTest8 PRIVATE parser)
add_test( NAME Parser:test8 COMMAND $<TARGET_FILE:ParserTest8>)

add_executable(ParserTest9 test9.cpp)
target_link_libraries(ParserTest9 PRIVATE parser)
add_test( NAME Parser:test9 COMMAND $<TARGET_FILE:ParserTest9>)

add_executable(ParserTest10 test10.cpp)
target_link_libraries(ParserTest10 PRIVATE parser)
add_test( NAME Parser:test10 COMMAND $<TARGET_FILE:ParserTest10>)

add_executable(ParserTest11 test11.cpp)
target_link_libraries(ParserTest11 PRIVATE parser)
add_test( NAME Parser:test11 COMMAND $<TARGET_FILE:ParserTest11>)

add_executable(ParserTest12 test12.cpp)
target_link_libraries(ParserTest12 PRIVATE parser)
add_test( NAME Parser:test12 COMMAND $<TARGET_FILE:ParserTest12>)

add_executable(ParserTest13 test13.cpp)
target_link_libraries(ParserTest13 PRIVATE parser)
add_test( NAME Parser:test13 COMMAND $<TARGET_FILE:ParserTest13>)